# schemaui

./: .gitignore  .pre-commit-config.yaml  .release-plz.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  FIX_REPORT.md  README.ZH.md  README.md  TUI_COMPLEX_TYPES_IMPLEMENTATION_SPEC.md  build.rs  justfile  release.toml  typos.toml
.github/workflows/: cargo-release-tag.yml  cd.yml  prek-checks.yaml  release-plz-pr.yml  release-plz-release.yml
.serena/memories/: TUI-refactor.md  TUI-refactor.txt  project_overview.md  role.md  style_and_conventions.md  suggested_commands.md  task_completion.md  tech_stack.md
Formula/: schemaui.rb
docs/: schemaui.asciinema.cast
docs/en/: cli_usage.md  structure_design.md  tui-architecture-overview.md
docs/zh/: cli_usage.zh.md  structure_design.md  tui-architecture-overview.md
examples/: complex.config-schema.json  complex.schema.json  complex.schema.json.md  demo.rs  nest.schema.json  precompile_codegen.rs  precompile_tui.rs  tui_artifact_codegen.rs  tui_artifact_demo.rs  ui_layout_dump.rs  ultra-complex.schema.json  web_precompile_snapshot.rs  web_snapshot_codegen.rs
keymap/: default.keymap.json
packaging/install/: install-methods.json
packaging/scoop/: schemaui-cli.json
schemaui-cli/: CHANGELOG.md  Cargo.toml
schemaui-cli/src/: cli.rs  completion.rs  io.rs  lib.rs  main.rs  session.rs
schemaui-cli/src/session/: builder.rs  bundle.rs  diagnostics.rs  format.rs  mod.rs  output.rs  schema_source.rs
schemaui-cli/src/tui/: mod.rs
schemaui-cli/src/web/: mod.rs
schemaui-cli/tests/: arg_order.rs  completion.rs  help.rs  output_defaults.rs  recursive_snapshot.rs  schema_auto_detection.rs
scripts/: README.md  build-web.sh  sync-install-docs.py  sync-package-manifests.py  update-cli-dependency.sh  update-readme-version.sh
src/: lib.rs
src/app/: mod.rs  schema_ui.rs
src/app/runtime/: list_ops.rs  mod.rs  overlay.rs
src/compile_time/: layout.rs  mod.rs  tui.rs  web.rs
src/core/: frontend.rs  mod.rs  pipeline.rs
src/domain/: mod.rs  schema.rs
src/form/: array.rs  composite.rs  key_value.rs  mod.rs  section.rs  state.rs
src/form/field/: convert.rs
src/form/field/components/: array_buffer.rs  base.rs  composite.rs  composite_list.rs  enum_select.rs  helpers.rs  key_value.rs  mod.rs  palette.rs  scalar_array.rs
src/form/field/state/: lists.rs  mod.rs
src/form/ui/: mod.rs  view.rs
src/io/: format.rs  input.rs  mod.rs  output.rs
src/precompile/: defaults.rs  layout.rs  mod.rs  tui.rs  web.rs
src/presentation/: mod.rs  view.rs
src/presentation/components/: body.rs  fields.rs  overlay.rs  sections.rs  tabstrip.rs
src/schema/: blueprint.rs  dialect.rs  layout.rs  metadata.rs  mod.rs  resolver.rs
src/tests/: mod.rs
src/tests/api/: mod.rs  schema_ui_tests.rs
src/tests/app/: mod.rs  overlay_stack_tests.rs
src/tests/form/: component_collection_tests.rs  component_overlay_context_tests.rs  component_palette_tests.rs  component_text_tests.rs  composite_list_tests.rs  composite_tests.rs  mod.rs  navigation_tests.rs  state_tests.rs
src/tests/io/: format_tests.rs  mod.rs
src/tests/presentation/: fields_tests.rs
src/tests/schema/: artifact_bundle_tests.rs  compile_time_tests.rs  complex_blueprint_tests.rs  dialect_tests.rs  layout_tests.rs  mod.rs  pipeline_artifact_tests.rs  pipeline_precompile_tests.rs  precompile_tests.rs  resolver_tests.rs
src/tests/tui/: mod.rs  session_artifact_tests.rs  session_precompile_tests.rs
src/tests/tui/app/: help_overlay_tests.rs  input_tests.rs  mod.rs  overlay_stack_tests.rs  ultra_complex_overlay_tests.rs
src/tests/tui/components/: component_text_tests.rs  fields_tests.rs  footer_tests.rs  mod.rs  overlay_tests.rs
src/tests/tui/state/: collection_remove_tests.rs  composite_list_tests.rs  composite_tests.rs  enum_tests.rs  key_value_tests.rs  layout_nav_tests.rs  mod.rs  navigation_tests.rs  ultra_complex_state_tests.rs
src/tests/ui_ast/: defaults_tests.rs  index_tests.rs  layout_tests.rs  mod.rs
src/tests/web/: compile_time_web_tests.rs  frontend_runtime_tests.rs  mod.rs  precompile_web_tests.rs  web_snapshot_tests.rs
src/tui/: mod.rs  session.rs
src/tui/app/: input.rs  keymap.rs  mod.rs  options.rs  popup.rs  schema_ui.rs  status.rs  terminal.rs  validation.rs
src/tui/app/runtime/: list_ops.rs  mod.rs  overlay.rs  overlay_legacy.rs
src/tui/model/: form_schema.rs  layout.rs  mod.rs  ui_ast_adapter.rs
src/tui/model/layout/: build.rs  helpers.rs  types.rs
src/tui/state/: actions.rs  array.rs  composite.rs  error.rs  form_state.rs  key_value.rs  layout_nav.rs  mod.rs  reducers.rs  section.rs  ui_store.rs
src/tui/state/composite/: composite_list.rs
src/tui/state/field/: convert.rs  mod.rs
src/tui/view/: frame.rs  mod.rs  view.rs
src/tui/view/components/: body.rs  fields.rs  footer.rs  help.rs  layout.rs  mod.rs  overlay.rs  popup.rs  sections.rs  tabstrip.rs
src/ui_ast/: builder.rs  bundle.rs  defaults.rs  form_schema.rs  index.rs  layout.rs  mod.rs  types.rs
src/web/: assets.rs  blueprint.rs  frontend.rs  mod.rs  session.rs  ui_ast.rs
tests/: README.md  test-package.json  ui_ast_regressions.rs
tests/e2e/: e2e-test-suite.js
tests/schemas/: test-comprehensive.schema.json  test.defs.2020-12.schema.json  test.defs.schema.json  test.enum.int.schema.json
tests/web-ui/: automated-ui-tests.html  web-ui-automated-tests.js
web/mvp-design/: example-single.tsx  impl-instrcution.md  impl-instruction.md  rust-backend-design.md  vite-single-build.md  web-roadmap.md
web/types/: ExitRequest.ts  FieldError.ts  PreviewRequest.ts  PreviewResponse.ts  README.md  SaveRequest.ts  SessionResponse.ts  ValidateRequest.ts  ValidationResponse.ts  WebBlueprint.ts  WebCompositeMode.ts  WebCompositeVariant.ts  WebField.ts  WebFieldKind.ts  WebRoot.ts  WebSection.ts
web/ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/ui/src/: App.test.tsx  App.tsx  api.ts  index.css  main.tsx  testData.ts  theme.tsx  types.ts  ui-ast.test.ts  ui-ast.ts
(+110 files in other folders)
