[package]
name = "schemaui-cli"
version = "0.2.8"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "CLI wrapper for schemaui, rendering JSON Schemas as TUIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuniqueunic/schemaui/schemaui-cli"
keywords = ["tui", "schema", "configuration", "terminal", "cross-platform"]
categories = ["command-line-interface", "config"]
readme = "cli_usage.md"

[[bin]]
name = "schemaui"
path = "src/main.rs"

[dependencies]
schemaui = { path = "..", version = "0.5.0" }
serde_json = "1"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = ["full", "web"]
full = ["json", "yaml", "toml", "web"]
json = ["schemaui/json"]
yaml = ["schemaui/yaml"]
toml = ["schemaui/toml"]
web = ["schemaui/web", "dep:tokio"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
