[package]
name = "schemaui-cli"
version = "0.5.3"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "CLI wrapper for schemaui, rendering JSON Schemas as TUIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuniqueUnic/schemaui"
keywords = ["tui", "schema", "configuration", "terminal", "cross-platform"]
categories = ["command-line-interface", "config"]
readme = "cli_usage.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/schemaui-cli-v{ version }/schemaui-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.'cfg(not(target_os = "windows"))']
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[[bin]]
name = "schemaui"
path = "src/main.rs"

[dependencies]
schemaui = { path = "..", version = "0.10.1", default-features = false, features = ["tui"] }
serde_json = "1"
color-eyre = "0.6"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
reqwest = { version = "0.13", features = ["blocking"], optional = true }
url = "2"

[features]
default = ["full", "remote-schema"]
full = ["json", "yaml", "toml", "web"]
json = ["schemaui/json"]
yaml = ["schemaui/yaml"]
toml = ["schemaui/toml"]
web = ["schemaui/web", "dep:tokio"]
remote-schema = ["dep:reqwest"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
